Bug 314121 - Crash (not reported) then deleted items will not move to trash
Summary: Crash (not reported) then deleted items will not move to trash
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.9.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-30 09:50 UTC by greg.richards@gmx.co.uk
Modified: 2013-02-28 07:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description greg.richards@gmx.co.uk 2013-01-30 09:50:01 UTC
Kmail crashed after changing all preferences to what I wanted, then went to delete mails and items do not delete nor when selected will move to the 'trash' folder.

I have tried to uninstall and reinstall Kmail and this does not fix the problem.

Reproducible: Always

Steps to Reproduce:
1.tried to delete an email
2.tried to select and send to waste basket
3.
Actual Results:  
Mails remained in the inbox

Expected Results:  
Should have deleted the emails or moved them to 'r=trash' folder
Comment 1 Laurent Montel 2013-01-30 09:56:30 UTC
backtrace ?
Comment 2 greg.richards@gmx.co.uk 2013-01-30 12:40:04 UTC
No backtrace available automatically. Tell me what to do (simply) and I'll do 
it)

Greg


On Wednesday 30 Jan 2013 09:56:30 you wrote:
> https://bugs.kde.org/show_bug.cgi?id=314121
> 
> Laurent Montel <montel@kde.org> changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
> CC|                            |montel@kde.org
> 
> --- Comment #1 from Laurent Montel <montel@kde.org> ---
> backtrace ?
Comment 3 Laurent Montel 2013-01-30 12:45:45 UTC
install debug package and reproduce crash it will launch drkonqi which shows you the backtrace.
Comment 4 greg.richards@gmx.co.uk 2013-01-30 12:53:12 UTC
Hi,

It doesn't crash anymore. As I said in the initial report the mails won't 
move from my IMAP Inbox to my Local folder for trash. I've tried to 
recreate the preference crash but it won't do it.

If I select the mails and right click, move to folder, it works! If I press 
either Del key, or move to wastebin button on the toolbar, they won't 
move!

Neither will the trash folder empty when I exit or when I ask the program 
to delete those mails.

Again, Inbox is IMAP and trash is Local Folder, it's almost as if a macro 
or script is failing?

Please advise as I get alot of junk and deleted mails.

Greg



On Wednesday 30 Jan 2013 12:45:45 you wrote:
> https://bugs.kde.org/show_bug.cgi?id=314121
> 
> --- Comment #3 from Laurent Montel <montel@kde.org> ---
> install debug package and reproduce crash it will launch drkonqi 
which shows
> you the backtrace.
Comment 5 Aurelien Gateau 2013-02-27 17:46:27 UTC
I had the same problem ("sending to trash" would not work). It turns out my "Trash" folder was wrong in my account configuration. Resetting the Trash folder there fixed that.

It would be great if KMail would first check if the trash folder exists and asks the user to select a folder if it is not the case. Right now the only feedback you get is a message along the lines of "Moving messages to trash failed" in the statusbar.
Comment 6 Allen Winter 2013-02-27 19:40:29 UTC
Aurelien,
I agree.  I even started to implement this once, but somehow got side-tracked.

In some cases, I've seen the trash folder setting become empty too.  No idea what causes that.

Anyway, would be a good thing to implement.
Comment 7 Laurent Montel 2013-02-28 07:18:19 UTC
Git commit f8955b26378d865539e4e70cb05567f962eae40f by Montel Laurent.
Committed on 28/02/2013 at 08:16.
Pushed by mlaurent into branch 'master'.

Fix Bug 314121 - Crash (not reported) then deleted items will not move to trash

Add a messagebox to signal that we must verify imap account trash.
So now we know what to do.

But don't know why trash folder is empty in some case (I never had it)

FIXED-IN: 4.11

M  +3    -2    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/f8955b26378d865539e4e70cb05567f962eae40f