Fix Bug 314121 - Crash (not reported) then deleted items will not move to trash

Add a messagebox to signal that we must verify imap account trash.
So now we know what to do.

But don't know why trash folder is empty in some case (I never had it)

FIXED-IN: 4.11
BUG: 314121